--- a/PRESSURE DIFFUSIVITY_CODE.ipynb
+++ b/PRESSURE DIFFUSIVITY_CODE.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "## **Pressure Diffusivity with PDE Method**\n",
-    "### *Author: Group B2 Numerical Method* Ini adalah test percobaan git\n",
+    "### *Author: Group B2 Numerical Method*\n",
     "\n",
     "### **Read This First !!**\n",
     "- Jupyter Notebook ini dibuat untuk memenuhi tugas akhir mata kuliah Numerical Method\n",
